# silly-net

./: README.md  makefile  skaffold.yaml
docs/: http.yaml
docs/reports/: report_10_90s.html  report_1_20s.html
infra/docker/: Dockerfile.front.p  Dockerfile.locust  Dockerfile.migrate
infra/k8s/: kind-config.yaml
infra/k8s/config/: app-config.yaml  kustomization.yaml
infra/k8s/db-migrate/: db-migrate.yaml  kustomization.yaml
infra/k8s/db-rollback/: db-rollback.yaml  kustomization.yaml
infra/k8s/front/: dev-front.p.yaml  front.p.yaml  kustomization.yaml
infra/k8s/grafana/: dev-grafana.yaml  grafana.yaml  kustomization.yaml
infra/k8s/grafana/dashboards/: front.json  nodes.json  pgdb.json
infra/k8s/load-agent/: dev-load-agent.yaml  kustomization.yaml  load-agent.yaml
infra/k8s/loki/: loki.yaml
infra/k8s/pg-db/: db.yaml  dev-db.yaml  kustomization.yaml
infra/k8s/prom-exporters/: cadvisor.yaml  exporters.yaml  kustomization.yaml
infra/k8s/prometheus/: prometheus.yaml
infra/k8s/promtail/: promtail.yaml
infra/k8s/tempo/: tempo.yaml
infra/manifests/: app-conf.yaml  db-migrate.yaml  db-rollback.yaml  db.yaml  front.p.yaml
py3/: README.md  docker-compose.yaml  makefile  pyproject.toml  yoyo.ini
py3/api/: http.yaml  openapi.yaml
py3/api/templates/: main.jinja  services.jinja
py3/app/: settings.py
py3/app/models/: users.py
py3/app/repo/: query.py  users.py
py3/app/repo/migrations/: 20230202_01_init.sql  20230304_01_search_index.sql
py3/app/services/: users.py
py3/app/views/: auth.py  main.py  models.py  services.py
py3/tests/: SNet.postman.json  import.py
py3/tests/reports/: report_1k_180s.html
services/db/: Dockerfile  deployment.yaml  migrate.sh  rollback.sh  yoyo.ini
services/db/migrations/: 20230202_01_init.rollback.sql  20230203_01_data_feed.py
services/py3/: .env.example  .gitignore
services/py3/app/models/: users.py
services/py3/app/repo/migrations/: 20230304_01_search_index.rollback.sql
services/py3/app/views/: services.py
services/py3/tests/reports/: report2_100_180s.html  report2_1k_600s.html
services/python/front/: .env.example  Dockerfile  deployment.yaml  docker-compose.yaml  makefile  pyproject.toml
services/python/front/app/: settings.py
services/python/front/app/models/: unique.py  users.py
services/python/front/app/repo/: users.py
services/python/front/app/services/: users.py
services/python/front/app/views/: auth.py  main.py  services.py
services/python/front/tests/: conftest.py  postman.json  test_auth.py  test_search.py
services/python/front/tests/fixtures/: db.py  repo.py
services/python/load_agent/: load.py
tools/load_agent/: load.py
tools/load_agent/reports/: report_100_90s.html
tools/tests/: SNet.postman.json
