[tool.poetry]
name = "highload"
version = "0.1.0"
description = "highload research project"
authors = ["VladNF <j@VladNF.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.89.1"
uvicorn = {extras = ["standard"], version = "^0.20.0"}


[tool.poetry.group.dev.dependencies]
pytest = "^7.2.1"
fastapi-code-generator = "^0.4.0"
black = "^22.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
