[tool.poetry]
name = "SNet front API"
version = "0.1.0"
description = "SNet Python front impl"
authors = ["VladNF <j@VladNF.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.109.2"
uvicorn = {extras = ["standard"], version = "^0.20.0"}
environs = "^9.5.0"
asyncpg = "^0.27.0"
pyjwt = "^2.6.0"
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
pydantic = {extras = ["email"], version = "^2.6.1"}


[tool.poetry.group.dev.dependencies]
pytest = "^7.2.1"
black = "^24.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
